--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": ">=4.5.0,<8.99.99"
+    "typo3/cms-core": ">=7.6.0,<8.99.99"
   },
   "autoload": {
     "psr-4": {
@@ -33,11 +33,7 @@
     "classmap": [
       "/",
       "api/",
-      "hooks/",
-      "lib/",
-      "marker/",
-      "model/",
-      "view/"
+      "hooks/"
     ]
   },
   "replace": {
