--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     {
       "name": "Franz Holzinger",
       "role": "Developer",
-      "homepage": "http://ttproducts.de"
+      "homepage": "https://ttproducts.de"
     }
   ],
   "license": [
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.0,<8.99.99",
+    "typo3/cms-core": ">=7.6.0,<9.3.99",
     "jambagecom/div2007": ">=1.10.6",
     "jambagecom/tslib_fetce": ">=0.4.0,<=0.9.0"
   },
@@ -37,19 +37,9 @@
     "tt_board": "self.version",
     "typo3-ter/tt-board": "self.version"
   },
-  "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin",
-    "preferred-install": {
-      "typo3/cms": "source",
-      "typo3/cms-core": "source",
-      "*": "dist"
-    }
-  },
   "extra": {
     "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web"
+      "extension-key": "tt_board"
     }
   }
 }
