--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
   ],
   "require": {
     "typo3/cms-core": ">=7.6.0,<9.4.0",
-    "jambagecom/div2007": ">=1.10.6",
-    "jambagecom/tslib_fetce": ">=0.4.0,<=0.9.0"
+    "typo3-ter/div2007": ">=1.10.6",
+    "typo3-ter/tslib_fetce": ">=0.4.0,<=0.9.0"
   },
   "autoload": {
     "psr-4": {
