--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     }
   ],
   "license": [
-    "GPL-2.0+"
+    "GPL-2.0-or-later"
   ],
   "require": {
     "typo3/cms-core": ">=7.6.0,<9.4.0",
@@ -34,8 +34,8 @@
     }
   },
   "replace": {
-    "tt_board": "self.version",
-    "jambagecom/tt-board": "self.version"
+    "jambagecom/tt-board": "self.version",
+    "typo3-ter/tt-board": "self.version"
   },
   "extra": {
     "typo3/cms": {
