--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": ">=8.7.0,<=9.5.99",
-    "jambagecom/div2007": ">=1.10.28",
-    "jambagecom/tslib-fetce": ">=0.5.1,<=0.9.0"
+    "typo3/cms-core": "^9.5 || ^10.4",
+    "jambagecom/div2007": "^1.10",
+    "jambagecom/tslib-fetce": "^0.5"
   },
   "autoload": {
     "psr-4": {
@@ -34,8 +34,7 @@
     }
   },
   "replace": {
-    "jambagecom/tt-board": "self.version",
-    "typo3-ter/tt-board": "self.version"
+    "jambagecom/tt-board": "self.version"
   },
   "extra": {
     "typo3/cms": {
