--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     "GPL-2.0-or-later"
   ],
   "require": {
+    "php": ">=7.3.1",
+    "ext-pdo": "*",
     "typo3/cms-core": "^9.5 || ^10.4.10",
     "typo3/cms-extensionmanager": "^10.4.10",
     "typo3/cms-felogin": "^10.4.10",
