--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -10,6 +10,11 @@ additional_hostnames: []
 additional_fqdns: []
 mariadb_version: "10.3"
 mysql_version: ""
+hooks:
+  post-start:
+  - composer: install
+  pre-start:
+  - exec-host: mkdir -p .build/public/typo3conf
 use_dns_when_possible: true
 composer_version: ""
 web_environment:
