--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "typo3/cms-lowlevel": "^10.4.10",
     "typo3/cms-scheduler": "^10.4.10",
     "typo3/cms-setup": "^10.4.10",
+    "bk2k/bootstrap-package": "~11.0.3",
     "jambagecom/fh-debug": "^0.9",
     "geithware/debug-mysql-db": "^1.0"
   },
