--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": ">=7.3.1",
+    "php": ">=7.4.0",
     "ext-pdo": "*",
-    "typo3/cms-core": "^9.5 || ^10.4.10",
-    "typo3/cms-extensionmanager": "^10.4.10",
-    "typo3/cms-felogin": "^10.4.10",
-    "typo3/cms-filemetadata": "^10.4.10",
-    "typo3/cms-tstemplate": "^10.4.10",
-    "typo3/minimal": "^10.4",
+    "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-extensionmanager": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-felogin": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-filemetadata": "^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-tstemplate": "^9.5 || ^10.4 || ^11.5",
+    "typo3/minimal": "^9.5 || ^10.4 || ^11.5",
     "jambagecom/div2007": "^1.12",
     "jambagecom/tslib-fetce": "^0.5.4"
   },
@@ -57,7 +57,7 @@
     }
   },
   "replace": {
-    "jambagecom/tt-board": "self.version"
+    "typo3-ter/tt-board": "self.version"
   },
   "extra": {
     "typo3/cms": {
