--- a/composer.json
+++ b/composer.json
@@ -26,22 +26,22 @@
   "require": {
     "php": ">=7.4.0",
     "ext-pdo": "*",
-    "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
-    "typo3/cms-extensionmanager": "^9.5 || ^10.4 || ^11.5",
-    "typo3/cms-felogin": "^9.5 || ^10.4 || ^11.5",
-    "typo3/cms-filemetadata": "^9.5 || ^10.4 || ^11.5",
-    "typo3/cms-tstemplate": "^9.5 || ^10.4 || ^11.5",
-    "typo3/minimal": "^9.5 || ^10.4 || ^11.5",
-    "jambagecom/div2007": "^1.12",
+    "typo3/cms-core": "^11.5 || ^12",
+    "typo3/cms-extensionmanager": "^11.5 || ^12",
+    "typo3/cms-felogin": "^11.5 || ^12",
+    "typo3/cms-filemetadata": "^11.5 || ^12",
+    "typo3/cms-tstemplate": "^11.5 || ^12",
+    "typo3/minimal": "^11.5 || ^12",
+    "jambagecom/div2007": "^1.14",
     "jambagecom/tslib-fetce": "^0.5.4"
   },
   "require-dev": {
     "typo3-console/composer-auto-commands": "*",
     "helhum/typo3-console": "^6.6.0",
-    "typo3/cms-belog": "^10.4.10",
-    "typo3/cms-lowlevel": "^10.4.10",
-    "typo3/cms-scheduler": "^10.4.10",
-    "typo3/cms-setup": "^10.4.10",
+    "typo3/cms-belog": "^11.5.17",
+    "typo3/cms-lowlevel": "^11.5.17",
+    "typo3/cms-scheduler": "^11.5.17",
+    "typo3/cms-setup": "^11.5.17",
     "bk2k/bootstrap-package": "~11.0.3",
     "jambagecom/fh-debug": "^0.9",
     "geithware/debug-mysql-db": "^1.0"
