add Documentation fixes

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,71 +1,28 @@
-# coding: utf-8
-
-# #####
-#
-# Settings.cfg - A TYPO3 Documentation Project's Configuration File
-#
-# About Syntax:
-#   See https://docs.python.org/2/library/configparser.html
-#
-# Attention:
-#   Only " ;" can start an inline comment.
-#   This is: blank PLUS semicolon!
-#
-# #####
-
 [general]
-
-; endless list of all of the general simple settings
-; you can use in 'conf.py'
-
 project     = Message board, twin mode
-version     = 1.10
-release     = 1.10.11
+version     = main (development)
+release     = main (development)
+copyright   = 2006
 t3author    = Franz Holzinger
-copyright   = since 2006 by Franz Holzinger
-
 description = Simple threaded (tree) or list message board (forum).
+
 
 [html_theme_options]
 
-; for theme t3SphinxThemeRtd
-
-# NOTE: Fill in YOUR values in the following!
-
 github_branch        = master
-github_commit_hash   =
 github_repository    = franzholz/tt_board
-github_revision_msg  =
-github_sphinx_locale = en_GB
+
 project_contact      = franz@ttproducts.de
-project_discussions  = https://jambage.com/kontakt/forum/forum.html
-project_home         = https://jambage.com
+project_discussions  =
+project_home         = https://github.com/franzholz/tt_board
 project_issues       = https://github.com/franzholz/tt_board/issues
-use_opensearch       =
+project_repository   = https://github.com/franzholz/tt_board
 
 
-[intersphinx_mapping]
+[extlinks]
 
-; Comment out what you don't use.
-; Uncomment only what you actually use in crossreferencing!
+issue = https://github.com/franzholz/tt_board/issues/%s | Issue #
 
-# t3api         = https://typo3.org/api/typo3cms/
-# t3cgl         = https://docs.typo3.org/typo3cms/CodingGuidelinesReference/
-# t3coreapi     = https://docs.typo3.org/typo3cms/CoreApiReference/
-# t3editors     = https://docs.typo3.org/typo3cms/EditorsTutorial/
-# t3extbasebook = https://docs.typo3.org/typo3cms/ExtbaseFluidBook/
-# t3fal         = https://docs.typo3.org/typo3cms/FileAbstractionLayerReference/
-# t3inside      = https://docs.typo3.org/typo3cms/InsideTypo3Reference/
-# t3install     = https://docs.typo3.org/typo3cms/InstallationGuide/
-# t3l10n        = https://docs.typo3.org/typo3cms/FrontendLocalizationGuide/
-# t3security    = https://docs.typo3.org/typo3cms/SecurityGuide/
-# t3services    = https://docs.typo3.org/typo3cms/Typo3ServicesReference/
-# t3skinning    = https://docs.typo3.org/typo3cms/SkinningReference/
-# t3start       = https://docs.typo3.org/typo3cms/GettingStartedTutorial/
-# t3tca         = https://docs.typo3.org/typo3cms/TCAReference/
-# t3templating  = https://docs.typo3.org/typo3cms/TemplatingTutorial/
-# t3ts45        = https://docs.typo3.org/typo3cms/TyposcriptIn45MinutesTutorial/
-# t3tsconfig    = https://docs.typo3.org/typo3cms/TSconfigReference/
-t3tsref       = https://docs.typo3.org/typo3cms/TyposcriptReference/
-# t3tssyntax    = https://docs.typo3.org/typo3cms/TyposcriptSyntaxReference/
 
+
+´
