--- a/composer.json
+++ b/composer.json
@@ -32,24 +32,8 @@
     "typo3/cms-filemetadata": "^11.5 || ^12",
     "typo3/cms-tstemplate": "^11.5 || ^12",
     "typo3/minimal": "^11.5 || ^12",
-    "jambagecom/div2007": "^1.16.2",
-    "jambagecom/tslib-fetce": "^0.6.0"
-  },
-  "require-dev": {
-    "typo3-console/composer-auto-commands": "*",
-    "helhum/typo3-console": "^6.6.0",
-    "typo3/cms-belog": "^11.5.17",
-    "typo3/cms-lowlevel": "^11.5.17",
-    "typo3/cms-scheduler": "^11.5.17",
-    "typo3/cms-setup": "^11.5.17",
-    "bk2k/bootstrap-package": "~11.0.3",
-    "jambagecom/fh-debug": "^0.9",
-    "geithware/debug-mysql-db": "^1.0"
-  },
-  "config": {
-    "bin-dir": ".build/bin",
-    "sort-packages": true,
-    "vendor-dir": ".build/vendor"
+    "jambagecom/div2007": "^1.17 || ^2.0",
+    "jambagecom/tslib-fetce": "^0.8.0"
   },
   "autoload": {
     "psr-4": {
@@ -58,21 +42,5 @@
   },
   "replace": {
     "typo3-ter/tt-board": "self.version"
-  },
-  "extra": {
-    "typo3/cms": {
-      "app-dir": ".build",
-      "extension-key": "tt_board",
-      "web-dir": ".build/public"
-    }
-  },
-  "scripts": {
-    "pre-autoload-dump": [
-       "mkdir -p .build/public/typo3conf/ext/",
-            "test -L .build/public/typo3conf/ext/tt_board || ln -snvf ../../../../. .build/public/typo3conf/ext/tt_board"
-    ],
-    "post-autoload-dump": [
-            "test -f .build/public/typo3conf/LocalConfiguration.php || typo3cms install:setup"
-    ]
   }
 }
