--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,28 +1,27 @@
 [general]
+
 project     = Message board, twin mode
 version     = main (development)
 release     = main (development)
-copyright   = 2006
+copyright   = since 2006
 t3author    = Franz Holzinger
 description = Simple threaded (tree) or list message board (forum).
 
 
 [html_theme_options]
 
-github_branch        = master
 github_repository    = franzholz/tt_board
+github_branch        = master
 
 project_contact      = franz@ttproducts.de
 project_discussions  =
-project_home         = https://github.com/franzholz/tt_board
+project_home         = https://extensions.typo3.org/extension/tt_board
 project_issues       = https://github.com/franzholz/tt_board/issues
 project_repository   = https://github.com/franzholz/tt_board
 
+use_opensearch       = https://docs.typo3.org/typo3cms/extensions/tt_board/stable/
 
 [extlinks]
 
 issue = https://github.com/franzholz/tt_board/issues/%s | Issue #
 
-
-
-´
