add discussions page

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -14,7 +14,7 @@ github_repository    = franzholz/tt_board
 github_branch        = master
 
 project_contact      = franz@ttproducts.de
-project_discussions  =
+project_discussions  = https://jambage.com/kontakt/forum.html
 project_home         = https://extensions.typo3.org/extension/tt_board
 project_issues       = https://github.com/franzholz/tt_board/issues
 project_repository   = https://github.com/franzholz/tt_board
