add extension key to composer.json

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,10 @@
   },
   "replace": {
     "typo3-ter/tt-board": "self.version"
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "tt_board"
+    }
   }
 }
