--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -4,8 +4,8 @@ services:
     autoconfigure: true
     public: false
   JambageCom\TtBoard\:
-    resource: '../Classes/*'
-    exclude: ['../Classes/{Api,Constants,Middleware}/*']
+    resource: '../Classes/'
+    exclude: ['../Classes/{Api,Constants,Middleware}/']
 
   JambageCom\TtBoard\EventListener\PageContentPreviewRenderingListener:
     tags:
