--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
   "require": {
     "php": ">=8.0.0",
     "ext-pdo": "*",
-    "typo3/cms-core": "^12 || ^13",
-    "typo3/cms-extensionmanager": "^12 || ^13",
-    "typo3/cms-felogin": "^12 || ^13",
-    "typo3/cms-filemetadata": "^12 || ^13",
-    "typo3/cms-tstemplate": "^12 || ^13",
-    "typo3/minimal": "^12 || ^13",
+    "typo3/cms-core": "^13.4",
+    "typo3/cms-extensionmanager": "^13.4",
+    "typo3/cms-felogin": "^13.4",
+    "typo3/cms-filemetadata": "^13.4",
+    "typo3/cms-tstemplate": "^13.4",
+    "typo3/minimal": "^13.4",
     "jambagecom/div2007": "^2.3.3",
     "jambagecom/tslib-fetce": "^0.9.1"
   },
