new Captcha API with request parameter

--- a/Configuration/Sets/MyPluginSet/config.yaml
+++ b/Configuration/Sets/MyPluginSet/config.yaml
@@ -1,5 +1,5 @@
 name: jambagecom/tt-board-my-plugin-set
-label: Board Forum Plugin Set
+label: Board Forum Plugin
 settings:
   website:
     background:
